<resources>
    <string name="app_name">AnyGym</string>
    <string name="login">Login</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="Mobile_No">Mobile Number</string>
    <string name="gender">Gender</string>
    <string name="login_Otp">OTP</string>
    <string name="send_otp">Send OTP</string>
    <string name="submit">Submit</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="logout">Logout</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="FullName">Full Name</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="Lines32">\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="about">Project By : Rahul Saliya \n Contact Us \nMobile : +XXYYYYYYYYYY \nEmail : RHSDevs@outlook.com</string>
</resources>
